--- a/livinglotsla/static/css/overrides/leaflet.less
+++ b/livinglotsla/static/css/overrides/leaflet.less
@@ -24,3 +24,7 @@
 .leaflet-popup-content-wrapper {
     border-radius: 0;
 }
+
+.leaflet-control-layers-toggle {
+    background-image: url(/static/img/layer-switcher.png);
+}
