--- a/livinglotsla/static/css/overrides/leaflet.less
+++ b/livinglotsla/static/css/overrides/leaflet.less
@@ -28,3 +28,7 @@
 .leaflet-control-layers-toggle {
     background-image: url(/static/img/layer-switcher.png);
 }
+
+.leaflet-control-loading {
+    background-image: url(/static/img/loading.gif);
+}
