Lot details page: organize icon

--- a/livinglotsla/static/css/base.css
+++ b/livinglotsla/static/css/base.css
@@ -3893,6 +3893,12 @@ footer .row {
   max-width: 100%;
   height: auto;
 }
+.lot-detail-organizers .icon {
+  background-image: url(/static/img/lot-detail-organize.png);
+  background-repeat: no-repeat;
+  height: 19px;
+  width: 19px;
+}
 /*
  * Overrides
  */
