--- a/livinglotsla/static/css/pages/lot_detail.less
+++ b/livinglotsla/static/css/pages/lot_detail.less
@@ -75,3 +75,12 @@
         height: auto;
     }
 }
+
+.lot-detail-organizers {
+    .icon {
+        background-image: url(/static/img/lot-detail-organize.png);
+        background-repeat: no-repeat;
+        height: 19px;
+        width: 19px;
+    }
+}
