--- a/livinglotsla/static/css/pages/map.less
+++ b/livinglotsla/static/css/pages/map.less
@@ -77,6 +77,28 @@
     }
 }
 
+.map-filters-type {
+    font-size: 16px;
+    font-weight: bold;
+
+    &-public {
+        color: #A9756D;
+    }
+
+    &-public-remnant {
+        color: #8C474D;
+    }
+
+    &-private {
+        color: #D4A7D4;
+    }
+
+    &-private-tax-default {
+        color: #9A649E;
+    }
+
+}
+
 .popup {
     header {
         font-size: 20px;
