--- a/livinglotsla/templates/livinglots/lots/map.html
+++ b/livinglotsla/templates/livinglots/lots/map.html
@@ -54,12 +54,12 @@
                 <div class="map-filters-content">
                     <ul class="map-filters-type">
                         <ul>
-                            <li>publicly owned vacant</li>
-                            <li>remnant/odd shape</li>
+                            <li class="map-filters-type-public">publicly owned vacant</li>
+                            <li class="map-filters-type-public-remnant">remnant/odd shape</li>
                         </ul>
                         <ul>
-                            <li>privately owned vacant</li>
-                            <li>tax default</li>
+                            <li class="map-filters-type-private">privately owned vacant</li>
+                            <li class="map-filters-type-private-tax-default">tax default</li>
                         </ul>
                         <ul>
                             <li>being organized</li>
