--- a/livinglotsla/static/css/pages/map.less
+++ b/livinglotsla/static/css/pages/map.less
@@ -3,6 +3,18 @@
     height: 1000px;
 }
 
+.map-filters-wrapper {
+    .make-row(0);
+    .make-md-column(10);
+    .make-md-column-offset(1);
+    height: 100%;
+}
+
+.map-filters-inner-wrapper {
+    .make-row(0);
+    height: 100%;
+}
+
 .map-filters {
     border-top: @frame-border;
     margin-bottom: 15px;
@@ -17,16 +29,19 @@
     }
 
     &#map-filters-parent {
+        .make-md-column(3);
+        .make-md-column-offset(9);
+
         background: rgba(256, 256, 256, .8);
         border: none;
-        left: 70.3%;
+        //left: 70.3%;
         margin: 0;
         padding-bottom: 5px;
         padding-left: 15px;
         padding-right: 15px;
         padding-top: 5px;
         position: relative;
-        width: 250px;
+        //width: 250px;
         z-index: 5000;
         &.expanded {
             height: 100%;
