--- a/livinglotsla/static/css/pages/map.less
+++ b/livinglotsla/static/css/pages/map.less
@@ -96,6 +96,10 @@
 .map-filters-type {
     font-weight: bold;
 
+    &-item {
+        cursor: pointer;
+    }
+
     &-public {
         color: #A9756D;
     }
