--- a/livinglotsla/templates/livinglots/lots/map.html
+++ b/livinglotsla/templates/livinglots/lots/map.html
@@ -56,12 +56,12 @@
                         <div class="map-filters-content">
                             <ul class="map-filters-type">
                                 <ul>
-                                    <li class="map-filters-type-public">publicly owned vacant</li>
-                                    <li class="map-filters-type-public-remnant">remnant/odd shape</li>
+                                    <li class="map-filters-type-item map-filters-type-public">publicly owned vacant</li>
+                                    <li class="map-filters-type-item map-filters-type-public-remnant">remnant/odd shape</li>
                                 </ul>
                                 <ul>
-                                    <li class="map-filters-type-private">privately owned vacant</li>
-                                    <li class="map-filters-type-private-tax-default">tax default</li>
+                                    <li class="map-filters-type-item map-filters-type-private">privately owned vacant</li>
+                                    <li class="map-filters-type-item map-filters-type-private-tax-default">tax default</li>
                                 </ul>
                                 <ul>
                                     <li>being organized</li>
