Use prop, fill disc when checked

--- a/livinglotsla/static/css/base.css
+++ b/livinglotsla/static/css/base.css
@@ -3860,6 +3860,10 @@ footer .row {
 }
 .map-filters-type-item {
   cursor: pointer;
+  list-style: circle;
+}
+.map-filters-type-item.on {
+  list-style: disc;
 }
 .map-filters-type-public {
   color: #A9756D;
