--- a/livinglotsla/static/css/pages/map.less
+++ b/livinglotsla/static/css/pages/map.less
@@ -98,6 +98,11 @@
 
     &-item {
         cursor: pointer;
+
+        list-style: circle;
+        &.on {
+            list-style: disc;
+        }
     }
 
     &-public {
