--- a/livinglotsla/templates/livinglots/lots/map.html
+++ b/livinglotsla/templates/livinglots/lots/map.html
@@ -56,22 +56,22 @@
                         <div class="map-filters-content">
                             <ul class="map-filters-type">
                                 <ul>
-                                    <li class="map-filters-type-item map-filters-type-public">
+                                    <li class="map-filters-type-item map-filters-type-public on">
                                         <input type="checkbox" name="public" class="filter filter-layer hidden" checked="true" />
                                         publicly owned vacant
                                     </li>
                                     <li class="map-filters-type-item map-filters-type-public-remnant">
-                                        <input type="checkbox" name="public_remnant" class="filter filter-layer hidden" checked="true" />
+                                        <input type="checkbox" name="public_remnant" class="filter filter-layer hidden" />
                                         remnant/odd shape
                                     </li>
                                 </ul>
                                 <ul>
-                                    <li class="map-filters-type-item map-filters-type-private">
+                                    <li class="map-filters-type-item map-filters-type-private on">
                                         <input type="checkbox" name="private" class="filter filter-layer hidden" checked="true" />
                                         privately owned vacant
                                     </li>
                                     <li class="map-filters-type-item map-filters-type-private-tax-default">
-                                        <input type="checkbox" name="private_tax_default" class="filter filter-layer hidden" checked="true" />
+                                        <input type="checkbox" name="private_tax_default" class="filter filter-layer hidden" />
                                         tax default
                                     </li>
                                 </ul>
