--- a/livinglotsla/static/css/pages/map.less
+++ b/livinglotsla/static/css/pages/map.less
@@ -59,6 +59,13 @@
         }
     }
 
+    &-grouped {
+        border: 0;
+        .map-filters-expander {
+            text-transform: capitalize;
+        }
+    }
+
     &-content {
         display: none;
     }
