--- a/livinglotsla/templates/livinglots/lots/map.html
+++ b/livinglotsla/templates/livinglots/lots/map.html
@@ -95,7 +95,26 @@
                     <section class="map-filters">
                         <h3 class="map-filters-expander">filter by</h3>
                         <div class="map-filters-content">
-                            filter by
+                            <section class="map-filters map-filters-grouped">
+                                <h4 class="map-filters-expander">council district</h4>
+                                <div class="map-filters-content">
+                                    council districts
+                                </div>
+                            </section>
+                            <section class="map-filters map-filters-grouped">
+                                <h4 class="map-filters-expander">neighborhood council area</h4>
+                                <div class="map-filters-content">
+                                    neighborhood council area
+                                </div>
+                            </section>
+                            <section class="map-filters map-filters-grouped">
+                                <h4 class="map-filters-expander">community plan area</h4>
+                                <div class="map-filters-content">community plan area</div>
+                            </section>
+                            <section class="map-filters map-filters-grouped">
+                                <h4 class="map-filters-expander">zoning code</h4>
+                                <div class="map-filters-content">zoning code</div>
+                            </section>
                         </div>
                     </section>
                     <section class="map-filters">
