--- a/livinglotsla/static/css/base.css
+++ b/livinglotsla/static/css/base.css
@@ -3796,15 +3796,16 @@ footer .row {
   font-size: 18px;
 }
 .map-filters#map-filters-parent {
+  position: relative;
   min-height: 1px;
   background: rgba(255, 255, 255, 0.8);
   border: none;
   margin: 0;
+  overflow-y: auto;
   padding-bottom: 5px;
   padding-left: 15px;
   padding-right: 15px;
   padding-top: 5px;
-  position: relative;
   z-index: 5000;
 }
 @media (min-width: 992px) {
