--- a/livinglotsla/static/css/pages/map.less
+++ b/livinglotsla/static/css/pages/map.less
@@ -35,14 +35,12 @@
 
         background: rgba(256, 256, 256, .8);
         border: none;
-        //left: 70.3%;
         margin: 0;
+        overflow-y: auto;
         padding-bottom: 5px;
         padding-left: 15px;
         padding-right: 15px;
         padding-top: 5px;
-        position: relative;
-        //width: 250px;
         z-index: 5000;
         &.expanded {
             height: 100%;
