--- a/livinglotsla/templates/livinglots/lots/map.html
+++ b/livinglotsla/templates/livinglots/lots/map.html
@@ -1,4 +1,4 @@
-{% load feincms_tags i18n inplace_tags static %}
+{% load councildistricts_tags feincms_tags i18n inplace_tags static %}
 
 <script id="popup-template" type="text/x-handlebars-template">
     {% verbatim %}
@@ -98,7 +98,12 @@
                             <section class="map-filters map-filters-grouped">
                                 <h4 class="map-filters-expander">council district</h4>
                                 <div class="map-filters-content">
-                                    council districts
+                                    {% get_council_districts as councildistricts %}
+                                    {% for councildistrict in councildistricts %}
+                                        <a href="#" class="map-filters-councildistrict" data-label="{{ councildistrict.label }}">
+                                            {{ councildistrict.label }} 
+                                        </a>
+                                    {% endfor %}
                                 </div>
                             </section>
                             <section class="map-filters map-filters-grouped">
