--- a/livinglotsla/templates/inplace/lots/lot_detail.html
+++ b/livinglotsla/templates/inplace/lots/lot_detail.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% load files_tags flatblock_tags i18n inplace_tags notes_tags organize_tags pathways_tags photos_tags %}
+{% load files_tags flatblock_tags i18n inplace_tags lots_tags notes_tags organize_tags pathways_tags photos_tags %}
 
 {% block title %}
     {{ lot.display_name|title|default:"unknown" }} |
@@ -262,9 +262,15 @@
                     {% endblocktrans %}
                 </p>
             {% elif not lot.known_use %}
-                <p>{% trans "We think this lot is vacant because:" %}</p>
-                <ul class="lot-detail-reasons">
-                </ul>
+                {% get_vacant_reasons for lot as reasons %}
+                {% if reasons %}
+                    <p>{% trans "We think this lot is vacant because:" %}</p>
+                    <ul class="lot-detail-reasons">
+                        {% for reason in reasons %}
+                            <li>{{ reason|safe }}</li>
+                        {% endfor %}
+                    </ul>
+                {% endif %}
             {% else %}
                 {% blocktrans with use=lot.known_use %}
                     The lot is being used as a {{ use }}.
