--- a/livinglotsla/templates/livinglots/lots/map.html
+++ b/livinglotsla/templates/livinglots/lots/map.html
@@ -128,6 +128,28 @@
                             size
                         </div>
                     </section>
+                    <section class="map-filters">
+                        <h3 class="map-filters-expander">download</h3>
+                        <div class="map-filters-content">
+                            <section style="margin-bottom: 10px;">
+                                {% blocktrans %}
+                                    Download currently viewed lots. GeoJSON and KML are mapping formats, so you can make your own maps!
+                                {% endblocktrans %}
+                            </section>
+
+                            <section class="details-buttons hidden-print">
+                                <a href="#" class="btn btn-default btn-block export export-csv" data-baseurl="{% url "lots:csv" %}?">
+                                    {% trans "spreadsheet" %}
+                                </a>
+                                <a href="#" class="btn btn-default btn-block export export-geojson" data-baseurl="{% url "lots:geojson" %}?download=yes&">
+                                    {% trans "GeoJSON" %}
+                                </a>
+                                <a href="#" class="btn btn-default btn-block export export-kml" data-baseurl="{% url "lots:kml" %}?">
+                                    {% trans "KML" %}
+                                </a>
+                            </section>
+                        </div>
+                    </section>
                 </section>
             </div>
         </div>
@@ -137,33 +159,6 @@
 {% comment %}
 <div class="overlaymenu overlaymenu-details">
     {% include "livinglots/lots/details.html" %}
-</div>
-
-<div class="overlaymenu overlaymenu-download">
-    <div class="overlaymenu-tip-container">
-        <div class="overlaymenu-tip"></div>
-    </div>
-
-    <div class="overlaymenu-menu-content">
-        <section style="margin-bottom: 10px;">
-            {% blocktrans %}
-                Download currently viewed lots. GeoJSON and KML are mapping 
-                formats, so you can make your own maps!
-            {% endblocktrans %}
-        </section>
-
-        <section class="details-buttons hidden-print">
-            <a href="#" class="btn btn-default btn-block export export-csv" data-baseurl="{% url "lots:csv" %}?">
-                {% trans "spreadsheet" %}
-            </a>
-            <a href="#" class="btn btn-default btn-block export export-geojson" data-baseurl="{% url "lots:geojson" %}?download=yes&">
-                {% trans "GeoJSON" %}
-            </a>
-            <a href="#" class="btn btn-default btn-block export export-kml" data-baseurl="{% url "lots:kml" %}?">
-                {% trans "KML" %}
-            </a>
-        </section>
-    </div>
 </div>
 
 <div class="overlaymenu overlaymenu-admin">
@@ -178,10 +173,6 @@
             </a>
         </section>
     </div>
-</div>
-
-<div class="overlaymenu overlaymenu-filter">
-    {% include "livinglots/lots/filters.html" %}
 </div>
 
 <div class="overlaymenu overlaymenu-news">
