--- a/livinglotsla/static/css/pages/map.less
+++ b/livinglotsla/static/css/pages/map.less
@@ -128,6 +128,16 @@
 
 }
 
+.map-filters-councildistricts {
+    margin-left: 3%;
+
+    .map-filters-councildistrict {
+        display: block;
+        text-align: center;
+        width: 20%;
+    }
+}
+
 .popup {
     header {
         font-size: 20px;
