--- a/livinglotsla/templates/base.html
+++ b/livinglotsla/templates/base.html
@@ -4,6 +4,8 @@
     <head>
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+        <link rel="shortcut icon" href="{% static "img/favico.ico" %}" type="image/x-icon" />
+
         {# TODO get site name dynamically using a context processor and sites framework #}
         <title>
             {% block title %}
