--- a/livinglotsla/static/css/base.less
+++ b/livinglotsla/static/css/base.less
@@ -1,4 +1,6 @@
 @frame-border: 1px solid #aaa;
+@body-font-family: "Times New Roman", serif; 
+@header-font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
 
 
 /*
@@ -22,12 +24,18 @@ body {
     margin: 0;
     padding: 0;
     width: 100%;
+    font-family: @body-font-family;
+    font-size: 21px;
+    line-height: 24px;
 }
 
 a {
     color: black;
 }
 
+h1, h2, h3 {
+    font-family: @header-font-family;
+}
 
 /* Header */
 
@@ -43,7 +51,7 @@ header .row {
     border-left: @frame-border;
     border-right: @frame-border;
     height: 100%;
-    line-height: 20px;
+    line-height: 26px;
     padding-bottom: 5px;
     padding-top: 5px;
 }
@@ -64,7 +72,7 @@ header .row {
 
     &-tagline {
         .menu-bookend;
-        font-size: 10px;
+        font-size: 12px;
         font-style: italic;
     }
 }
@@ -72,7 +80,10 @@ header .row {
 .navbar-default {
     background-color: transparent;
     border: none;
-    font-size: 12px;
+    font-size: 16px;
+    font-family: @header-font-family; 
+    font-weight: bold;
+    line-height: 26px;
     margin-bottom: 0;
     min-height: 0;
     padding-left: 0;
@@ -115,6 +126,7 @@ footer {
     &-collaborator-links {
         .menu-bookend;
         color: #aaa;
+        font-family: @header-font-family; 
         font-size: 12px;
         text-transform: uppercase;
 
