--- a/livinglotsla/static/css/overrides/bootstrap.less
+++ b/livinglotsla/static/css/overrides/bootstrap.less
@@ -12,6 +12,8 @@
 .btn-default {
     background: black;
     color: white;
+    font-family: @header-font-family; 
+    font-size: 18px;
 
     &:hover {
         color: black;
