--- a/livinglotsla/static/css/pages/lot_detail.less
+++ b/livinglotsla/static/css/pages/lot_detail.less
@@ -20,10 +20,16 @@
 
     h2 {
         font-size: 18px;
+        font-style: normal;
         font-weight: bold;
         margin-bottom: 10px;
         margin-top: 10px;
         text-transform: uppercase;
+    }
+
+    #aside-right {
+        font-size: 18px;
+        font-style: italic;
     }
 }
 
