--- a/livinglotsla/static/css/base.less
+++ b/livinglotsla/static/css/base.less
@@ -124,11 +124,12 @@ footer {
     }
 
     &-collaborator-links {
-        .menu-bookend;
         color: #aaa;
         font-family: @header-font-family; 
         font-size: 12px;
         text-transform: uppercase;
+        line-height: 27px;
+        padding-top: 5px;
 
         a {
             color: black;
@@ -138,6 +139,7 @@ footer {
     }
 
     &-subscribe {
+        .menu-bookend;
         line-height: 27px;
 
         input {
@@ -148,7 +150,7 @@ footer {
 
     &-social {
         .menu-bookend;
-        line-height: 5px;
+        line-height: 27px;
 
         ul {
             list-style: none;
@@ -167,7 +169,7 @@ footer {
     background-repeat: no-repeat;
     display: inline-block;
     margin-right: 5px;
-    height: 21px;
+    height: 20px;
     width: 21px;
 }
 
