--- a/livinglotsla/static/css/base.less
+++ b/livinglotsla/static/css/base.less
@@ -202,6 +202,11 @@ footer {
 
 /* Base page */
 
+#main {
+    .make-md-column(9);
+    .make-md-column-offset(1);
+}
+
 .header-home-link {
     text-align: center;
 
