--- a/livinglotsla/templates/base.html
+++ b/livinglotsla/templates/base.html
@@ -38,7 +38,7 @@
                     {% block sidebar_left %}
                     {% endblock %}
 
-                    <section id="main" class="{% block mainclasses %}col-md-9 col-md-offset-1{% endblock %}">
+                    <section id="main">
 
                         {% block breadcrumbs_wrapper %}
                             <ul class="breadcrumb">
